apps/prod/robson/backend-ingress.yml
# Ingress: Robson Backend
# https://api.robson.rbx.ia.br
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: robson-backend-ingress
  namespace: robson
  labels:
    app.kubernetes.io/name: robson-backend-ingress
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: robson
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.robson.rbx.ia.br
      secretName: robson-backend-tls
  rules:
    - host: api.robson.rbx.ia.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: robson-backend
                port:
                  number: 8080
