apps/prod/robson/frontend-ingress.yml
# Ingress: Robson Frontend
# https://app.robson.rbx.ia.br
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: robson-frontend-ingress
  namespace: robson
  labels:
    app.kubernetes.io/name: robson-frontend-ingress
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: robson
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - app.robson.rbx.ia.br
      secretName: robson-frontend-tls
  rules:
    - host: app.robson.rbx.ia.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: robson-frontend
                port:
                  number: 80
