apps/prod/robson/lda-prod-ingress.yml
# Ingress: leandrodamasio.rbx.ia.br
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lda-prod-ingress
  namespace: robson
  labels:
    app.kubernetes.io/name: lda-prod-ingress
    app.kubernetes.io/part-of: rbx-infra
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - leandrodamasio.rbx.ia.br
      secretName: lda-prod-tls
  rules:
    - host: leandrodamasio.rbx.ia.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lda-prod-svc
                port:
                  number: 80
